# claude-recall

./: .gitignore  .mcp.json.bak  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.tiered.yml  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: deploy-pages.yml
docs/: PYTHON_ALTERNATIVE.md  QUICK_START.md  TIERED_MEMORY.md
plugin/: package.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/modes/: code.json
scripts/: build-hooks.js  inject-instructions.sh  storage-config.js  sync-marketplace.cjs
site/: DEPLOY.md  index.html
src/python/: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/python/claude_mem/: __init__.py  __main__.py  config.py  models.py
src/python/claude_mem/api/: __init__.py  app.py  routes.py
src/python/claude_mem/embedding/: __init__.py  service.py
src/python/claude_mem/storage/: __init__.py
src/python/claude_mem/storage/cold/: __init__.py  hybrid_search.py  observation_store.py  postgres_client.py  summary_store.py
src/python/claude_mem/storage/hot/: __init__.py  observation_store.py  redis_client.py  vector_search.py
src/python/claude_mem/storage/tiered/: __init__.py  cache_warmer.py  manager.py  query_router.py
src/python/claude_mem/workers/: __init__.py  retention.py  summarization.py
src/python/scripts/: com.claude-mem.plist  install.sh  uninstall.sh
tests/: encryption-integration.test.ts  encryption.test.ts  field-level-encryption.test.ts  inter-session-messages.test.ts  project-identity.test.ts
(+96 files in other folders)
